Fix z-index property to .fc-dropdown__menu on shortcode-sold-properties.scss

--- a/IDXBOOST-PLUGIN/IDXBOOST-COM/idx-boost-master-css/scss/core/helpers/resources/shortcode-sold-properties.scss
+++ b/IDXBOOST-PLUGIN/IDXBOOST-COM/idx-boost-master-css/scss/core/helpers/resources/shortcode-sold-properties.scss
@@ -180,7 +180,7 @@
   top: 100%;
   min-width: 160px;
   width: 100%;
-  z-index: 2;  
+  z-index: 999;  
 }
 
 .fc-dropdown__item {
